gitops/manifests/media/prowlarr/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      nodeSelector:
          kubernetes.io/hostname: stuart 
      securityContext:
        runAsUser: 322  #all processes in the pod run with user ID 321
        runAsGroup: 321  # same but for groups
        fsGroup: 321 # owner of attached volume is group 321 
      containers:
        - name: prowlarr
          image: ghcr.io/hotio/prowlarr:release-2326ea7
          securityContext:
            runAsUser: 0  # Temporary root for setup, not great, but does not work otherwise
            allowPrivilegeEscalation: true
          imagePullPolicy: Always
          ports:
          - containerPort: 9696 
          resources:
            requests:
              memory: "500Mi"  
              cpu: "100m"      
            limits:
              memory: "1G"  
              cpu: "500m"
          volumeMounts:
            - mountPath: /config  # Mount for Prowlarr config
              name: config-storage
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: pvc-prowlarr-config # PVC for config storage
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 80 # we talk to this
    protocol: TCP
    targetPort: 9696 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  labels:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host: prowlarr.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
  tls:
  - hosts:
      - prowlarr.${DOMAIN_NAME}
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
